--- a/apps/svelte/package.json
+++ b/apps/svelte/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "svelte",
+	"name": "@my-farm/svelte",
 	"version": "0.0.1",
 	"scripts": {
 		"dev": "vite dev",
@@ -11,9 +11,7 @@
 		"lint": "prettier --check . && eslint .",
 		"format": "prettier --write .",
 		"test:integration": "playwright test",
-		"test:unit": "vitest",
-		"db:push": "drizzle-kit push",
-		"db:studio": "drizzle-kit studio"
+		"test:unit": "vitest"
 	},
 	"devDependencies": {
 		"@fontsource/fira-mono": "^5.0.0",
@@ -23,18 +21,23 @@
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
+		"@tailwindcss/typography": "^0.5.14",
 		"@types/eslint": "^9.6.0",
 		"@types/pg": "^8.11.10",
-		"drizzle-kit": "^0.24.2",
+		"autoprefixer": "^10.4.20",
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
+		"flowbite-svelte-icons": "2.0.0-next.16",
 		"globals": "^15.0.0",
 		"lucia": "^3.2.0",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
+		"prettier-plugin-tailwindcss": "^0.6.5",
 		"svelte": "^5.0.0-next.1",
+		"svelte-5-ui-lib": "^0.9.17",
 		"svelte-check": "^4.0.0",
+		"tailwindcss": "^3.4.9",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0",
 		"vite": "^5.0.3",
@@ -42,8 +45,8 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@my-farm/db": "workspace:*",
 		"drizzle-orm": "^0.33.0",
-		"pg": "^8.13.0",
 		"zod": "^3.23.8"
 	}
 }
