--- a/apps/svelte/.prettierrc
+++ b/apps/svelte/.prettierrc
@@ -1,8 +1,9 @@
 {
 	"useTabs": true,
-	"singleQuote": true,
-	"trailingComma": "none",
-	"printWidth": 100,
+	"singleQuote": false,
+	"trailingComma": "all",
+	"printWidth": 80,
+	"bracketSameLine": true,
 	"plugins": ["prettier-plugin-svelte", "prettier-plugin-tailwindcss"],
 	"overrides": [
 		{
