--- a/apps/svelte/package.json
+++ b/apps/svelte/package.json
@@ -23,6 +23,7 @@
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
+		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.14",
 		"@types/eslint": "^9.6.0",
 		"@types/pg": "^8.11.10",
@@ -49,6 +50,7 @@
 		"@my-farm/db": "workspace:*",
 		"@my-farm/ui": "workspace:*",
 		"drizzle-orm": "^0.33.0",
+		"preline": "^2.5.0",
 		"zod": "^3.23.8"
 	}
 }
