--- a/apps/svelte/package.json
+++ b/apps/svelte/package.json
@@ -20,6 +20,7 @@
 		"@melt-ui/svelte": "^0.83.0",
 		"@neoconfetti/svelte": "^2.0.0",
 		"@playwright/test": "^1.28.1",
+		"@preline/overlay": "^2.5.0",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
@@ -39,6 +40,7 @@
 		"prettier-plugin-tailwindcss": "^0.6.5",
 		"svelte": "^5.0.0-next.1",
 		"svelte-check": "^4.0.0",
+		"tailwind-merge": "^2.5.3",
 		"tailwindcss": "^3.4.9",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0",
@@ -48,7 +50,6 @@
 	"type": "module",
 	"dependencies": {
 		"@my-farm/db": "workspace:*",
-		"@my-farm/ui": "workspace:*",
 		"drizzle-orm": "^0.33.0",
 		"preline": "^2.5.0",
 		"zod": "^3.23.8"
