--- a/apps/svelte/package.json
+++ b/apps/svelte/package.json
@@ -20,13 +20,13 @@
 		"@melt-ui/svelte": "^0.83.0",
 		"@neoconfetti/svelte": "^2.0.0",
 		"@playwright/test": "^1.28.1",
-		"@preline/overlay": "^2.5.0",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.14",
 		"@types/eslint": "^9.6.0",
+		"@types/leaflet": "^1.9.12",
 		"@types/pg": "^8.11.10",
 		"autoprefixer": "^10.4.20",
 		"daisyui": "^4.12.12",
@@ -34,6 +34,7 @@
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
 		"globals": "^15.0.0",
+		"leaflet": "^1.9.4",
 		"lucia": "^3.2.0",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
@@ -51,6 +52,7 @@
 	"dependencies": {
 		"@my-farm/db": "workspace:*",
 		"drizzle-orm": "^0.33.0",
+		"lucide-svelte": "^0.447.0",
 		"preline": "^2.5.0",
 		"zod": "^3.23.8"
 	}
